update string class doc